View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0028445 | Open CASCADE | OCCT:Data Exchange | public | 2017-02-07 15:19 | 2017-09-29 16:24 |
Reporter | Assigned To | apn | |||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Target Version | 7.2.0 | Fixed in Version | 7.2.0 | ||
Summary | 0028445: Data Exchange - Opening specific STEP file leads to application crash | ||||
Description | Fix for current version from issue #0028256. | ||||
Steps To Reproduce | bugs step bug28256 | ||||
Tags | No tags attached. | ||||
Test case number | bugs step bug28256 | ||||
|
Branch CR28445 has been created by ika. SHA-1: 625d04791c8b823f6afe7618f75567411ae716c6 Detailed log of new commits: Author: ika Date: Tue Feb 7 15:20:29 2017 +0300 0028445: Data Exchange - Opening specific STEP file leads to application crash Add check for null vertex during translation from STEP. |
|
Dear GKA, could you please review branch CR28445? |
|
Branch CR28445 is ready to be tested |
|
Dear BugMaster, Branch CR28445 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested. SHA-1: 625d04791c8b823f6afe7618f75567411ae716c6 Number of compiler warnings: occt component: Linux: 0 (0 on master) Windows: 0 (0 on master) MasOS: 0 (0 on master) products component: Linux: 64 Windows: 0 MacOS: 1185 Regressions/Differences: Not detected Testing cases: bugs step bug28256 - OK http://occt-tests/CR28445-master-OCCT/Debian70-64/bugs/step/bug28256.html http://occt-tests/CR28445-master-OCCT/Windows-64-VC10/bugs/step/bug28256.html Testing on Linux: Total MEMORY difference: 92192988 / 91292223 [+0.99%] Total CPU difference: 19978.720000000016 / 19662.570000000327 [+1.61%] Testing on Windows: Total MEMORY difference: 57125015 / 57124391 [+0.00%] Total CPU difference: 18278.44996879845 / 18512.045866198645 [-1.26%] |
|
Branch CR28445 has been deleted by inv. SHA-1: 625d04791c8b823f6afe7618f75567411ae716c6 |
occt: master 9f984417 2017-02-07 12:20:29
Committer: apn Details Diff |
0028445: Data Exchange - Opening specific STEP file leads to application crash Add check for null vertex during translation from STEP. |
Affected Issues 0028445 |
|
mod - src/StepToTopoDS/StepToTopoDS_TranslateVertex.cxx | Diff File | ||
mod - tests/bugs/step/bug26451 | Diff File | ||
add - tests/bugs/step/bug28256 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2017-02-07 15:19 |
|
New Issue | |
2017-02-07 15:19 |
|
Assigned To | => ika |
2017-02-07 15:22 | git | Note Added: 0063496 | |
2017-02-07 15:23 |
|
Note Added: 0063497 | |
2017-02-07 15:23 |
|
Assigned To | ika => gka |
2017-02-07 15:23 |
|
Status | new => resolved |
2017-02-07 15:23 |
|
Steps to Reproduce Updated | |
2017-02-07 15:39 | gka | Note Added: 0063498 | |
2017-02-07 15:39 | gka | Assigned To | gka => bugmaster |
2017-02-07 15:39 | gka | Status | resolved => reviewed |
2017-02-07 16:06 |
|
Assigned To | bugmaster => apv |
2017-02-09 11:29 |
|
Test case number | => bugs step bug28256 |
2017-02-09 12:06 |
|
Note Added: 0063724 | |
2017-02-09 12:06 |
|
Assigned To | apv => bugmaster |
2017-02-09 12:06 |
|
Status | reviewed => tested |
2017-02-09 12:06 |
|
Note Edited: 0063724 | |
2017-02-10 14:33 | apn | Changeset attached | => occt master 9f984417 |
2017-02-10 14:33 | apn | Assigned To | bugmaster => apn |
2017-02-10 14:33 | apn | Status | tested => verified |
2017-02-10 14:33 | apn | Resolution | open => fixed |
2017-03-20 14:35 | git | Note Added: 0064495 | |
2017-09-29 16:20 |
|
Fixed in Version | => 7.2.0 |
2017-09-29 16:24 |
|
Status | verified => closed |