0028445: Data Exchange - Opening specific STEP file leads to application crash

Add check for null vertex during translation from STEP.